# UniversalBlenderMCP

./: API_USAGE.md  CLAUDE_DESKTOP_CONFIG.md  README.md  VERSION  api.py  mcp_config_example.json  pyproject.toml
.github/workflows/: ci.yml
addon/: __init__.py  server.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: __init__.py
src/blender/: __init__.py  connector.py  visual_control.py
src/cli/: gui.py  main.py  record.py  watch.py
src/rust_bridge/: __init__.py
src/server/: __init__.py  mcp_server.py  websocket_server.py
src/server/tools/: __init__.py  animation.py  camera.py  io_ops.py  lights.py  material_nodes.py  modifiers.py
tests/: test_basic.py
