[project]
name = "universal-blender-mcp"
version = "0.1.0"
description = "Universal MCP server for Blender with Rust screenshot capabilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
    "click>=8.0",
    "pydantic>=2.0",
    "msgpack>=1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "mypy",
    "ruff",
]
rust = [
    "maturin>=1.0",
]

[project.scripts]
ubm = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
